
    Corrected a static binding bug where meta-predicates called within other
    meta-predicates would not be correctly compiled. This bug prevented the
    "mtbatch" from running.

    Removed references to the de facto standard predicates retractall/1,
    compare/3, and callable/1 from all the config files of Prolog compilers
    where these predicates are built-in.

    Added a YAP integration file, "yaphooks.pl", defining the hook predicate
    user:prolog_predicate_name/2.

    Renamed the SWI-Prolog integration files, "swihook.pl" and "xpcehook.pl"
    to, respectively, "swihooks.pl" and "xpcehooks.pl".

    Added a definition for the hook predicate user:prolog_predicate_name/2 to
    the SWI-Prolog hook file, "swihooks.pl". This hook predicate allows a more
    user-friendly experience when using the SWI-Prolog profiler with Logtalk.
    Requires SWI-Prolog 5.10.2 (stable) or 5.11.8 (development) or later
    versions.

    Updated the library "types_loader.lgt" file to also load the heaps library
    files.

    Added an example, "profilers", featuring simple wrappers for the SICStus
    Prolog 4 profiler and the YAP count profiler.

    Added an example, "delegates", illustrating an implementation of the
    delegation design pattern.

    Updated the "cc" example, correcting the declaration of the predicate
    shell/1 and adding an operating_system_type/1 predicate.

    Updated the "examples/tester.sh" script in order to work when running
    Logtalk without using the installer scripts.

    Updated the "build_release.sh" script in order to calculate all the
    necessary checksums when building the MacOS X installer package.


2.41.1 - October 6, 2010

    Modified the compilation of objects that don't instantiate, specialize,
    or extend other objects in order to allow their use as roots of either
    class hierarchies or prototype hierarchies. This change simplifies the
    definition of class hierarchies when reflexive designs are not required.
